# llm-knowledge-base

./: .gitignore  CLAUDE.md  DEVELOPMENT.md  FRONTEND_BRIEF.md  HOW_IT_WORKS.md  PROJECT_STATE.md  README.md  config.yaml  pyproject.toml  requirements-vercel.txt  requirements.txt  vercel.json
api/: index.py
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css  mockData.ts  types.ts
output/: health-report-20260402.md  health-report-20260404.md  substack-article.md
output/slides/: attention-is-all-you-need-001-slides.md
raw/: _manifest.yaml
raw/articles/: blue-light-screens-melatonin-sleep.md  caffeine-dose-timing-effects-sleep.md  flash-attention.md  karpathy-llm-knowledge-base-tweets.md  llm-brain-fmri-alignment.md  optimal-exercise-dose-sleep-quality.md  sample-attention.md  scaling-laws.md  stress-impact-sleep-quality-mediation.md
src/: _search_rebuild.py  cli.py  config.py  llm.py  utils.py
src/compiler/: categorizer.py  compiler.py  graph_builder.py  indexer.py  linker.py  summarizer.py
src/dashboard/: app.py
src/ingest/: images.py  ingest.py  manifest.py
src/lint/: health.py
src/qa/: qa.py
src/render/: charts.py  slides.py
src/search/: engine.py  web.py
templates/prompts/: chunk_claims.md  cluster_claims.md  connect_claims.md  detect_domains.md  enrich_graph.md  extract_concepts.md  generate_concept_article.md  generate_entity.md  generate_index.md  generate_wiki_summary.md  (+6 more)
wiki/: _backlinks.yaml  _compilation_state.yaml  _index.md  _summary.md  graph.json  graph_insights.json  log.md
(+329 files in other folders)
